--- a/serverless.yml
+++ b/serverless.yml
@@ -63,6 +63,51 @@ functions:
           path: /product/{productId}
           method: DELETE
           cors: true
+  get-order-byId:
+    handler: src/orders.getOrderById
+    layers:
+      - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
+    events:
+      - http:
+          path: /order/{orderId}
+          method: GET
+          cors: true
+  get-order-byDate:
+    handler: src/orders.getOrderByDate
+    layers:
+      - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
+    events:
+      - http:
+          path: /order/{startDate}/{endDate}
+          method: GET
+          cors: true
+  insert-order:
+    handler: src/orders.insertOrder
+    layers:
+      - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
+    events:
+      - http:
+          path: /order
+          method: POST
+          cors: true
+  update-order:
+    handler: src/orders.updateOrder
+    layers:
+      - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
+    events:
+      - http:
+          path: /order/{orderId}
+          method: PUT
+          cors: true
+  delete-order:
+    handler: src/orders.deleteOrderById
+    layers:
+      - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
+    events:
+      - http:
+          path: /order/{orderId}
+          method: DELETE
+          cors: true
 
 package:
   patterns:
@@ -71,7 +116,6 @@ plugins:
   - serverless-offline
   - serverless-prune-plugin
   - serverless-deployment-bucket
-
 custom:
   prune:
     automatic: true
