--- a/serverless.yml
+++ b/serverless.yml
@@ -108,56 +108,51 @@ functions:
           path: /order/{orderId}
           method: DELETE
           cors: true
-
-
-get-users:
+  get-users:
     handler: src/services/users.getUser
     layers:
       - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
     events:
       - http:
-          path: /User
+          path: /user
           method: GET
           cors: true
-get-User-byId:
+  get-user-byId:
     handler: src/services/users.getUserById
     layers:
       - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
     events:
       - http:
-          path: /User/{userId}
+          path: /user/{userId}
           method: GET
           cors: true
-insert-User:
+  insert-user:
     handler: src/services/users.insertUser
     layers:
       - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
     events:
       - http:
-          path: /User
+          path: /user
           method: POST
           cors: true
-update-User:
+  update-user:
     handler: src/services/users.updateUser
     layers:
       - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
     events:
       - http:
-          path: /User/{userId}
+          path: /user/{userId}
           method: PUT
           cors: true
-delete-User:
+  delete-user:
     handler: src/services/users.deleteUser
     layers:
       - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
     events:
       - http:
-          path: /User/{userId}
+          path: /user/{userId}
           method: DELETE
           cors: true
-
-
-
 
 package:
   patterns:
