--- a/serverless.yml
+++ b/serverless.yml
@@ -154,6 +154,57 @@ functions:
           method: DELETE
           cors: true
 
+get-category:
+    handler: src/services/category.getCategory
+    layers:
+      - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
+    events:
+      - http:
+          path: /category
+          method: GET
+          cors: true
+ get-category-byId:
+    handler: src/services/category.getCategoryById
+    layers:
+      - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
+    events:
+      - http:
+          path: /category/{categoryId}
+          method: GET
+          cors: true
+insert-category:
+    handler: src/services/category.insertCategory
+    layers:
+      - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
+    events:
+      - http:
+          path: /category
+          method: POST
+          cors: true
+update-category:
+    handler: src/services/category.updateCategory
+    layers:
+      - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
+    events:
+      - http:
+          path: /category/{categoryId}
+          method: PUT
+          cors: true
+delete-category:
+    handler: src/services/category.deleteCategory
+    layers:
+      - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
+    events:
+      - http:
+          path: /category/{categoryId}
+          method: DELETE
+          cors: true
+
+
+
+
+
+
 package:
   patterns:
     - '!dependencies_layer/**'
