servicio de detalle ordenes

--- a/serverless.yml
+++ b/serverless.yml
@@ -108,7 +108,33 @@ functions:
           path: /order/{orderId}
           method: DELETE
           cors: true
-
+  get-detail-order-byId:
+    handler: src/services/detailorders.getDetailsOrderById
+    layers:
+      - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
+    events:
+      - http:
+          path: /detailorder/{orderId}
+          method: GET
+          cors: true
+  insert-detail-order:
+    handler: src/services/detailorders.insertDetailsOrder
+    layers:
+      - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
+    events:
+      - http:
+          path: /detailorder
+          method: POST
+          cors: true
+  update-detail-order:
+    handler: src/services/detailorders.updateDetailsOrder
+    layers:
+      - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
+    events:
+      - http:
+          path: /detailorder/{orderId}
+          method: PUT
+          cors: true
 
 package:
   patterns:
