--- a/serverless.yml
+++ b/serverless.yml
@@ -225,49 +225,49 @@ functions:
           path: /category/{categoryId}
           method: DELETE
           cors: true
-  get-season:
-    handler: src/services/season.getSeason
+  get-seasons:
+    handler: src/services/seasons.getSeason
     layers:
       - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
     events:
       - http:
-          path: /season
+          path: /seasons
           method: GET
           cors: true
-  get-season-byId:
-    handler: src/services/season.getSeasonById
+  get-seasons-byId:
+    handler: src/services/seasons.getSeasonById
     layers:
       - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
     events:
       - http:
-          path: /season/{seasonId}
+          path: /seasons/{seasonId}
           method: GET
           cors: true
-  insert-season:
-    handler: src/services/season.insertSeason
+  insert-seasons:
+    handler: src/services/seasons.insertSeason
     layers:
       - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
     events:
       - http:
-          path: /season
+          path: /seasons
           method: POST
           cors: true
-  update-season:
-    handler: src/services/season.updateSeason
+  update-seasons:
+    handler: src/services/seasons.updateSeason
     layers:
       - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
     events:
       - http:
-          path: /season/{seasonId}
+          path: /seasons/{seasonId}
           method: PUT
           cors: true
-  delete-season:
-    handler: src/services/season.deleteSeasonById
+  delete-seasons:
+    handler: src/services/seasons.deleteSeasonById
     layers:
       - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
     events:
       - http:
-          path: /season/{seasonId}
+          path: /seasons/{seasonId}
           method: DELETE
           cors: true 
 package:
