--- a/serverless.yml
+++ b/serverless.yml
@@ -35,7 +35,16 @@ functions:
       - http:
           path: /product/personalized
           method: GET
-          cors: true        
+          cors: true
+  get-products-topping:
+    handler: src/handlers/products.getProductsTopping
+    layers:
+      - ${file(./config.json):${opt:stage, self:provider.stage, 'dev'}.DEPENDENCIES_LAYER}
+    events:
+      - http:
+          path: /product/topping
+          method: GET
+          cors: true                  
   get-product-byId:
     handler: src/handlers/products.getProductById
     layers:
